--- a/wikibase/Krusty_bot/config.cfg
+++ b/wikibase/Krusty_bot/config.cfg
@@ -1,6 +1,6 @@
 mediawiki_api_url: http://localhost:8181/w/api.php
 sparql_endpoint_url: http://localhost:8282/proxy/wdqs/bigdata/namespace/wdq/sparql
 user: Admin@testbot
-password: 1osn7ue998m6f8nrhkdibb7hmq8t2u2f
-node-path: ~/Krusty/test_nodes.csv
-edge-path: ~/Krusty/test_edges.csv
+password: e9bjrs5pshk352bnoenu62bjvuhdqfu4
+node-path: ~/LUMC/HDSR/bioknowledge-reviewer/bioknowledge_reviewer/neo4j-community-4.2.1/import/HD/HD_concepts.csv
+edge-path: ~/LUMC/HDSR/bioknowledge-reviewer/bioknowledge_reviewer/neo4j-community-4.2.1/import/HD/HD_statements.csv
