Added documentation to a majority of the files

--- a/wikibase/Krusty_bot/config.cfg
+++ b/wikibase/Krusty_bot/config.cfg
@@ -1,6 +1,8 @@
 mediawiki_api_url: http://localhost:8181/w/api.php
 sparql_endpoint_url: http://localhost:8282/proxy/wdqs/bigdata/namespace/wdq/sparql
 user: Admin@testbot
-password: sk3vj18vhegenpccbsjqdb84q7jfigg4
+password: 637gjh8kkukmcsvg9belgdr26if5uf16
 node-path: ~/LUMC/HDSR/bioknowledge-reviewer/bioknowledge_reviewer/neo4j-community-4.2.1/import/HD/HD_concepts.csv
 edge-path: ~/LUMC/HDSR/bioknowledge-reviewer/bioknowledge_reviewer/neo4j-community-4.2.1/import/HD/HD_statements.csv
+update-neo4j: True
+update-path: ~/LUMC/HDSR/bioknowledge-reviewer/bioknowledge_reviewer/
